--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "socket.io": "^4.7.0",
