--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^5.6.0",
+    "firebase-admin": "^11.9.0",
     "socket.io": "^4.7.0",
     "tmi.js": "^1.8.5"
   },
